@@ -17,8 +17,25 @@
  */
 package com.netflix.curator.framework.api;
 
-public interface DeleteBuilder extends
-    BackgroundPathable<Void>,
-    Versionable<BackgroundPathable<Void>>
+import com.netflix.curator.framework.CuratorFramework;
+
+public interface DeleteBuilder extends DeleteBuilderBase
 {
+    /**
+     * <p>
+     *     Solves this edge case: deleting a node can fail due to connection issues. Further,
+     *     if the node was ephemeral, the node will not get auto-deleted as the session is still valid.
+     *     This can wreak havoc with lock implementations.
+     * </p>
+     * 
+     * <p>
+     *     When <code>guaranteed</code> is set, Curator will record failed node deletions and 
+     *     attempt to delete them in the background until successful. NOTE: you will still get an
+     *     exception when the deletion fails. But, you can be assured that as long as the 
+     *     {@link CuratorFramework} instance is open attempts will be made to delete the node.
+     * </p>
+     *  
+     * @return this
+     */
+    public DeleteBuilderBase    guaranteed();
 }
